# metaflow-ga-testing

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: test-kubernetes.yml  test-local.yml
src/metaflow_qa_tests/argo_workflows/: conftest.py  test_argo_basic.py  test_ci_argo.py
src/metaflow_qa_tests/argo_workflows/conditional_tests/: conditionalFlow.py  conditionalSkipFlow1.py  conditionalSkipFlow2.py  conditionalSkipFlow3.py  conditionalSkipFlow4.py  conditionalSkipFlow5.py  failingConditionalFlow.py  nestedConditional1.py  nestedConditional2.py  nestedConditional3.py  nestedConditional4.py  nestedConditional5.py  nestedConditional6.py  nestedConditional7.py  nestedConditional8.py  nestedConditional9.py  nestedRecursiveConditional1.py  nestedRecursiveConditional2.py  nestedRecursiveConditional3.py  recursiveConditional1.py  recursiveConditional2.py  test_conditionals.py
src/metaflow_qa_tests/argo_workflows/deploy_time_triggers/: EventTestFlow.py  ParamTest1.py  ParamTest2.py  ParamTest3.py  ParamTest4.py  ParamTest5.py  ParamTest6.py  ParamTest7.py  ParamTestFail1.py  ParamTestFail2.py  ParamTestTriggerOnFinish1.py  ParamTestTriggerOnFinish2.py  ParamTestTriggerOnFinish3.py  ParamTestTriggerOnFinish4.py  ParamTestTriggerOnFinish5.py  baseflow.py  (+6 more)
src/metaflow_qa_tests/basic/: conftest.py  test_basic.py
src/metaflow_qa_tests/flows/: ci_helloflow.py  condatest.py  helloflow.py  mixed_condatest.py  mixed_pypitest.py  pypitest.py
src/metaflow_qa_tests/kubernetes/: conftest.py  test_ci_kubernetes.py  test_kubernetes.py
(+4 files in other folders)
