[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "metaflow-qa-tests"
version = "0.1.0"
description = "QA test suite for metaflow"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "metaflow",
    "pytest",
    "pytest-xdist"
]

[tool.setuptools.packages.find]
where = ["src"]