[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "metaflow-qa-tests"
version = "0.1.0"
description = "QA test suite for metaflow"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "metaflow",
    "pytest",
    "pytest-xdist"
]

[tool.pytest.ini_options]
markers = [
    "local: tests that run against the local backend (no infrastructure)",
    "kubernetes: tests that run steps on Kubernetes (requires dev stack)",
    "argo_workflows: tests that deploy to Argo Workflows (requires dev stack + Argo)",
]

[tool.setuptools.packages.find]
where = ["src"]